# tapgres

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PKGBUILD  README.md  SECURITY.md  flake.nix
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  update-flake-lock.yml
docs/: session-format.md
examples/: demo-session.jsonl  gen_manpage.rs
man/: sections.md
packaging/tapgres/: PKGBUILD
packaging/tapgres-bin/: PKGBUILD
src/: capture.rs  cli.rs  decode.rs  filter.rs  flow.rs  lib.rs  main.rs  net.rs  proxy.rs  session.rs  state.rs  tui.rs
tests/: replay.rs  session_cli.rs
tests/fixtures/: session-v1.jsonl
