[package]
name = "tapgres"
version = "0.3.0"
edition = "2024"
authors = ["Ning Sun <sunng@pm.me>"]
license = "MIT"
description = "Passively tap a local PostgreSQL port and decode its wire traffic to stdout"
keywords = ["postgres", "postgresql", "pgwire", "pcap", "network"]
categories = ["command-line-utilities", "database", "network-programming"]
homepage = "https://github.com/sunng87/tapgres"
repository = "https://github.com/sunng87/tapgres"
readme = "README.md"
rust-version = "1.85"

[dependencies]
# Protocol-layer only: gives us the `messages` module for decoding.
pgwire = { version = "0.40", default-features = false }
pcap = "2.4"
bytes = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
regex = "1"

# --- TUI (`--tui`) ---
# ratatui re-exports crossterm (its default backend), so we use that for events.
# `unstable-rendered-line-info` exposes Paragraph::line_count, used to fit the
# wrap-mode viewport to whole items so multi-line events aren't clipped.
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
# crossbeam-channel carries decoded lines from the (possibly multi-threaded)
# source to the output consumer (stdout-printer thread or the TUI).
crossbeam-channel = "0.5"

# --- MITM proxy mode (`--mode mitm`) ---
# tokio drives the per-connection relay; tokio-rustls terminates TLS on the
# client leg and (optionally) re-encrypts on the upstream leg.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
# tokio-rustls/rustls defaults pull in `aws_lc_rs` (→ aws-lc-sys, which needs
# cmake/perl). Pin both to the `ring` provider to keep the build self-contained.
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pemfile = "2"
# rcgen generates the CA + server certificate used to terminate client TLS.
rcgen = "0.14"

# --- manpage generation (`cargo run --example gen_manpage`) ---
# clap_mangen renders the clap `Command` (the single source of truth for all
# options) to roff. The remaining man-page prose lives in `man/sections.md`
# and is converted to roff by pandoc at generation time (see
# examples/gen_manpage.rs), so no roff-building crate is needed. clap_mangen
# is dev-only: it never reaches a normal `cargo build`/release/`cargo install`.
[dev-dependencies]
clap_mangen = "0.2"
